@@ -2,11 +2,18 @@
 \title{DiffBind News}
 \encoding{UTF-8}
 
+\section{version 1.9.14}{
+ \itemize{
+  \item{Feature: added minMappingQuality filter to dba.count.}
+  }
+}
+
+
 \section{version 1.9.9}{
  \itemize{
   \item{Feature: added support to pass in "fragments" when using summarizeOverlaps to count.}
   \item{Fix: bug in dba when samplesheet passed in as data frame.}   
-  \item{Change: now using FRIP (fractions of reads in peaks) instyead of SN (signal-to-noise).}
+  \item{Change: now using FRIP (fractions of reads in peaks) instead of SN (signal-to-noise).}
   }
 }
 
